fix text sizing overflow issue on activity buttons

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -378,7 +378,7 @@ ul.nav-main {
     line-height:1.25;
     text-align:left;
     font-size:2.955rem;
-    margin-top:10!important;
+    margin-top:10px !important;
     color: rgba(255,255,255,0.8);
 }
 
